tests/baselines/reference/parserAccessibilityAfterStatic6.errors.txt
==== tests/cases/compiler/parserAccessibilityAfterStatic6.ts (1 errors) ====
    class Outer
    {
    static public
                 
!!! parserAccessibilityAfterStatic6.ts(3,14): error TS1005: '}' expected.